err.log
In file included from ./src/rtp.c:1:0:
./include/base.h:46:13: warning: multi-line comment [-Wcomment]
             //log_msg("File: "__FILE__", Line: %05d:  " format"\r\n", __LINE__, ##__VA_ARGS__); \
             ^
./src/rtp.c: In function ‘get_timestamp’:
./src/rtp.c:74:2: warning: implicit declaration of function ‘gettimeofday’ [-Wimplicit-function-declaration]
  gettimeofday(&tv, NULL);
  ^
./src/rtp.c: In function ‘build_rtp_nalu’:
./src/rtp.c:242:13: warning: unused variable ‘time_delay’ [-Wunused-variable]
     int32_t time_delay;
             ^
./src/rtp.c: In function ‘rtp_send_from_file’:
./src/rtp.c:422:14: warning: implicit declaration of function ‘get_file_size’ [-Wimplicit-function-declaration]
  file_size = get_file_size(fp);
              ^
./src/rtp.c:456:7: error: ‘info’ undeclared (first use in this function)
   if(!info)
       ^
./src/rtp.c:456:7: note: each undeclared identifier is reported only once for each function it appears in
./src/rtp.c:476:3: error: ‘is_running’ undeclared (first use in this function)
   is_running = 1;
   ^
./src/rtp.c:484:5: warning: ‘return’ with no value, in function returning non-void
     return;
     ^
./src/rtp.c:412:6: warning: unused variable ‘last_nalu’ [-Wunused-variable]
  int last_nalu = 0;
      ^
./src/rtp.c:411:6: warning: unused variable ‘found_nalu’ [-Wunused-variable]
  int found_nalu = 0;
      ^
./src/rtp.c:410:11: warning: unused variable ‘p’ [-Wunused-variable]
  uint8_t *p = NULL;
           ^
./src/rtp.c:409:28: warning: unused variable ‘out_buf’ [-Wunused-variable]
  uint8_t in_buf[READ_LEN], out_buf[READ_LEN];
                            ^
./src/rtp.c:408:6: warning: unused variable ‘is_runing’ [-Wunused-variable]
  int is_runing = 1;
      ^
./src/rtp.c:407:11: warning: unused variable ‘frame_size’ [-Wunused-variable]
  uint32_t frame_size;
           ^
./src/rtp.c:406:11: warning: unused variable ‘bytes_left’ [-Wunused-variable]
  uint32_t bytes_left;
           ^
./src/rtp.c: In function ‘rtp_send_packet’:
./src/rtp.c:514:11: warning: implicit declaration of function ‘create_udp_client’ [-Wimplicit-function-declaration]
  sockfd = create_udp_client("192.169.27.196", port);
           ^
./src/rtp.c: In function ‘rtp_send_from_stream’:
./src/rtp.c:500:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
./src/rtp.c: In function ‘rtp_send_packet’:
./src/rtp.c:522:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [rtp.o] Error 1
